--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/moni
+spring.datasource.username=shared-user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Hibernate Configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
